file routes missed.

--- a/app/views/ccsf_rails/index.html.erb
+++ b/app/views/ccsf_rails/index.html.erb
@@ -1,4 +1,3 @@
-<h1>CcsfRails#index</h1>
+<h1>Not finished... yet #index</h1>
 <p>Find me in app/views/ccsf_rails/index.html.erb</p>
 
-<small>Hello guys</small>
