--- a/app/views/ccsf_rails/index.html.erb
+++ b/app/views/ccsf_rails/index.html.erb
@@ -1,3 +1,4 @@
-<h1>Not finished... yet #index</h1>
-<p>Find me in app/views/ccsf_rails/index.html.erb</p>
-
+<h1>Welcome to index page - not finish</h1>
+<p>
+	Find me in app/views/ccsf_rails/index.html.erb
+</p>
