--- a/app/views/ccsf_rails/about.html.erb
+++ b/app/views/ccsf_rails/about.html.erb
@@ -1,2 +1,4 @@
-<h1>CcsfRails#about</h1>
-<p>Find me in app/views/ccsf_rails/about.html.erb</p>
+<label>
+	This is my second assigment of the Ruby on Rails class. </br>
+	Here, I'm using a master page that contanis the menu above, and all the others pages extends it.
+</label>
