--- a/app/views/ccsf_rails/index.html.erb
+++ b/app/views/ccsf_rails/index.html.erb
@@ -1,4 +1,2 @@
-<h1>Welcome to index page - not finish</h1>
-<p>
-	Find me in app/views/ccsf_rails/index.html.erb
-</p>
+You can edit this file here: <%= __FILE__ %>
+
