--- a/app/views/ccsf_rails/links.html.erb
+++ b/app/views/ccsf_rails/links.html.erb
@@ -1,2 +1,7 @@
-<h1>CcsfRails#links</h1>
-<p>Find me in app/views/ccsf_rails/links.html.erb</p>
+<label> 
+	Website to manage your online classes: <a href="https://insight.ccsf.edu/">CCSF Insight</a> 
+</label>
+</br>
+<label>
+	Ruby on rails tutorial: <a href="http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Tutorial</a> 
+</label>
