--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Cs232demo</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+	<head>
+		<title>Cs232demo</title>
+		<%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+		<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+		<%= csrf_meta_tags %>
+	</head>
+	<body>
 
-<%= yield %>
+		<div class="welcome">
+			
+			<div class="content">
+				<div id="left_div">
+					<h3>Index page</h3>
+				</div>
 
-</body>
+				<div id="right_div">
+					<h3><%= Time.now.strftime("%m/%d/%Y")  %></h3>
+				</div>
+			</div>
+			
+			<p>
+				<%= link_to "INDEX", :controller => "ccsf_rails", :action => "index" %>
+				<%= link_to "LINKS", :controller => "ccsf_rails", :action => "links" %>
+				<%= link_to "ABOUT", :controller => "ccsf_rails", :action => "about" %>
+			</p>
+
+			<%= yield %>
+
+		</div>
+
+	</body>
 </html>
