--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<html></html>
+<head>
+
+</head>
+<body>
+	<div class="welcome">
+		<h1>Welcome!</h1>
+
+		<p>
+			This is the Welcome2 index page.
+		</p>
+
+		You can edit this file here: <%= __FILE__ %>
+
+	</div>
+</body>
+</html>
