--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 // Our SCSS
 
-$background-color: #fafafa;
+$background-color: green;
 $sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $serif: Baskerville,Georgia, "Times New Roman", serif;
 $text-color: #222222;
