--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,17 +1,10 @@
-<html></html>
 <head>
-
+	<title>CCSF_RAILS</title>
+	<%= stylesheet_link_tag "welcome.css" %>
 </head>
-<body>
-	<div class="welcome">
-		<h1>Welcome!</h1>
 
-		<p>
-			This is the Welcome2 index page.
-		</p>
+<div class="welcome">
+	This is the Welcome2 index page.
 
-		You can edit this file here: <%= __FILE__ %>
-
-	</div>
-</body>
-</html>
+	You can edit this file here: <%= __FILE__ %>
+</div>
