--- a/app/views/ccsf_rails/index.html.erb
+++ b/app/views/ccsf_rails/index.html.erb
@@ -1,2 +1,11 @@
+<head>
+	<title>CCSF_RAILS</title>
+	<%= stylesheet_link_tag "ccsf_rails.css" %>
+</head>
+
+<div class="welcome">
+	Index of ccsf_rails
+</div>
+
 You can edit this file here: <%= __FILE__ %>
 
