--- a/app/views/ccsf_rails/index.html.erb
+++ b/app/views/ccsf_rails/index.html.erb
@@ -1,6 +1,6 @@
 <head>
 	<title>CCSF_RAILS</title>
-	<%= stylesheet_link_tag "ccsf_rails.css" %>
+	<%= stylesheet_link_tag params[:controller] %>
 </head>
 
 <div class="welcome">
