added css to the pages about and link.

--- a/app/views/ccsf_rails/about.html.erb
+++ b/app/views/ccsf_rails/about.html.erb
@@ -1,4 +1,7 @@
-<label>
-	This is my second assigment of the Ruby on Rails class. </br>
-	Here, I'm using a master page that contanis the menu above, and all the others pages extends it.
-</label>
+<head>
+	<title>CCSF_RAILS</title>
+	<%= stylesheet_link_tag params[:controller] %>
+</head>
+
+<label> This is my second assigment of the Ruby on Rails class. </br>
+	Here, I'm using a master page that contanis the menu above, and all the others pages extends it. </label>
