--- a/app/views/ccsf_rails/links.html.erb
+++ b/app/views/ccsf_rails/links.html.erb
@@ -1,7 +1,8 @@
-<label> 
-	Website to manage your online classes: <a href="https://insight.ccsf.edu/">CCSF Insight</a> 
-</label>
+<head>
+	<title>CCSF_RAILS</title>
+	<%= stylesheet_link_tag params[:controller] %>
+</head>
+
+<label> Website to manage your online classes: <a href="https://insight.ccsf.edu/">CCSF Insight</a> </label>
 </br>
-<label>
-	Ruby on rails tutorial: <a href="http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Tutorial</a> 
-</label>
+<label> Ruby on rails tutorial: <a href="http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Tutorial</a> </label>
