some html files modified

--- a/app/views/ccsf_rails/about.html.erb
+++ b/app/views/ccsf_rails/about.html.erb
@@ -3,5 +3,9 @@
 	<%= stylesheet_link_tag params[:controller] %>
 </head>
 
+<div class="welcome">
+	About of ccsf_rails
+</div>
+
 <label> This is my second assigment of the Ruby on Rails class. </br>
 	Here, I'm using a master page that contanis the menu above, and all the others pages extends it. </label>
