--- a/app/views/ccsf_rails/index.html.erb
+++ b/app/views/ccsf_rails/index.html.erb
@@ -6,6 +6,7 @@
 <div class="welcome">
 	Index of ccsf_rails
 </div>
-
-You can edit this file here: <%= __FILE__ %>
+<div>
+	You can edit this file here: <%= __FILE__ %>
+</div>
 
