--- a/app/views/ccsf_rails/links.html.erb
+++ b/app/views/ccsf_rails/links.html.erb
@@ -3,6 +3,14 @@
 	<%= stylesheet_link_tag params[:controller] %>
 </head>
 
-<label> Website to manage your online classes: <a href="https://insight.ccsf.edu/">CCSF Insight</a> </label>
-</br>
-<label> Ruby on rails tutorial: <a href="http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Tutorial</a> </label>
+<div class="welcome">
+	Links of ccsf_rails
+</div>
+
+<div>
+	Website to manage your online classes: <a href="https://insight.ccsf.edu/">CCSF Insight</a>
+</div>
+
+<div>
+	Ruby on rails tutorial: <a href="http://ruby.railstutorial.org/ruby-on-rails-tutorial-book">Tutorial</a>
+</div>
