--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 			
 			<div class="content">
 				<div id="left_div">
-					<h3>Index page</h3>
+					<h3>ccsf_rails</h3>
 				</div>
 
 				<div id="right_div">
